<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/lightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ref_10"
        android:layout_marginRight="@dimen/ref_10"
        android:layout_marginTop="@dimen/ref_30"
        android:orientation="vertical"
        android:background="@color/lightGrey">

        <TextView
            android:id="@+id/helpTitleBack"
            style="@style/helpPageStyle"
            android:text="@string/help_title_extended"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primaryText" />

        <TextView
            android:id="@+id/helpBodyBack"
            style="@style/helpPageStyle"
            android:textColorLink="@color/white"
            android:layout_marginBottom="24dp"
            android:text="@string/help_body_extended" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/help2" />

        <!--<TextView-->
        <!--android:id="@+id/helpBodyPoints"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="left"-->
        <!--android:paddingBottom="40dp"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:paddingRight="10dp"-->
        <!--android:text="xxx"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/ref_font_medium" />-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"
            android:paddingBottom="48dp"
            android:paddingTop="24dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >

                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="1." />

                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="2." />

                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points2" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="3." />
                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points3" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="4." />
                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points4" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="5." />
                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points5" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="6." />
                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points6" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="7." />
                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points7" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="8." />

                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points8" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/helpPageStyle"
                    android:layout_weight="0.2"
                    android:text="9." />

                <TextView
                    style="@style/helpPagePointsStyle"
                    android:layout_weight="3"
                    android:text="@string/help_points9" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>